tests/phppt/errors/bad_dominant_macro_mark_end.phppt
--TEST--
Bad macro identifier
--FILE--
<?php

macro {
    foo bar ·
} >> {
    _
}

?>
--EXPECTF--
Bad dominant macro marker '·' offset 2 on line 4.
